--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -10,13 +10,13 @@
                 {{ article.title }}
             </h2>
 
-{#            <div class="entry-meta">#}
-{#                <ul>#}
-{#                    <li>{{ moment(article.created).fromNow() }}</li>#}
-{#                    <span class="meta-sep">&bull;</span>#}
-{#                    <li>{{ article.source }}</li>#}
-{#                </ul>#}
-{#            </div>#}
+            <div class="entry-meta">
+                <ul>
+                    <li>{{ moment(article.created).fromNow() }}</li>
+                    <span class="meta-sep">&bull;</span>
+                    <li>{{ article.source }}</li>
+                </ul>
+            </div>
 
         </header>
 
