--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,7 +43,7 @@
 			   	            <ul id="nav" class="nav">
                                 <li><a href="{{ url_for('web.index') }}">首页</a></li>
                                 <li><a href="{{ url_for('web.archives') }}">归档</a></li>
-                                <li><a href="archives.html">留言</a></li>
+                                <li><a href="{{ url_for('web.contact') }}">留言</a></li>
                                 <li class="has-children"><a href="{{ url_for('web.about') }}">关于</a>
 							<ul>
 	                  </ul>
@@ -146,7 +146,7 @@
                     </ul>
                 </div>
 
-                  <p class="copyright">&copy; Copyright 2017 Adison's Room</p>
+                  <p class="copyright">&copy; Copyright 2019 fzx</p>
 
              </div> <!-- End row -->
 
