--- a/app/templates/_submit_comment.html
+++ b/app/templates/_submit_comment.html
@@ -6,11 +6,11 @@
         {{ form.follow(type='hidden') }}
         <div class="group">
             <label for="cName">名字 <span class="required">*</span></label>
-            {{ form.name( id="cName",  size="35", required='', value=current_user.username) }}
+            {{ form.name( id="cName",  size="35", required='', value='名字') }}
         </div>
         <div class="group">
             <label for="cEmail">邮箱 <span class="required">*</span></label>
-            {{ form.email( id="cEmail", size="35", required='', value=current_user.email) }}
+            {{ form.email( id="cEmail", size="35", required='', value='邮箱') }}
         </div>
         <div class="message group">
             <label for="cMessage">Message <span class="required">*</span></label>
