--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -174,9 +174,9 @@
                     var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器
                     var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
                     if (!(isAndroid || isiOS)) {
-                        var forkStr = ' <a href="https://github.com/adisonhyh/flask-blog" target="_blank">\n' +
+                        var forkStr = ' <a href="https://github.com/xiaofanzhi/blog" target="_blank">\n' +
                             '                <img style="z-index: 1000 ; position: absolute; top: 0; right: 0; border: 0;"\n' +
-                            '                     src="https://github.com/xiaofanzhi/blog"\n' +
+                            '                     src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67"\n' +
                             '                     alt="Fork me on GitHub"\n' +
                             '                     data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png">\n' +
                             '            </a>'
