--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -134,13 +134,13 @@
 
                 <div class="twelve columns">
                     <ul class="social-links">
-                        <li><a href="https://www.facebook.com/100006076216729" target="_blank"><i
+                        <li><a href="https://www.facebook.com/" target="_blank"><i
                                 class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://twitter.com/adisonhyh" target="_blank"><i
+                        <li><a href="https://twitter.com/" target="_blank"><i
                                 class="fa fa-twitter"></i></a></li>
-                        <li><a href="https://plus.google.com/u/0/112898125721355991987" target="_blank"><i
+                        <li><a href="https://plus.google.com/" target="_blank"><i
                                 class="fa fa-google-plus"></i></a></li>
-                        <li><a href="https://github.com/adisonhyh" target="_blank"><i
+                        <li><a href="https://github.com/xiaofanzhi" target="_blank"><i
                                 class="fa fa-github-square"></i></a>
                         </li>
                     </ul>
